--- a/handout/include/group06.tex
+++ b/handout/include/group06.tex
@@ -2,86 +2,33 @@
 \section{InfiniteGraph}
 
 \subsection{General}
-
-\paragraph{Product Website} \url{http://www.inifinitegraph.com}
-
-\paragraph{Project Group}
-Jens \textit{Erat}
-Todor \textit{Georgiev}
-J\"{u}rgen \textit{H\"{o}lsch}
-Manuel \textit{Hotz}
-Florian \textit{Junghaus}
-Jens \textit{Metzner}
-Marc Steffen \textit{Spicker}
-
-\begin{itemize}
-\item \emph{Product website}
-\item \emph{Short general product description (not a text block from Wikipedia or the product website)}
-\item \emph{Authors of this profile}
-\end{itemize}
+\input{include/group6/01_general.tex}
 
 \subsection{Data Model}
-\begin{itemize}
-\item \emph{Precise description of the data model, especially in terms of differences from the \dquote{standard} models presented in the lecture.}
-\item \emph{Detailed summary of the basic data manipulation API, i.e., features to create, retrieve, update and delete data items.}
-\end{itemize}
+\input{include/group6/02_data_model.tex}
 
 \subsection{Query Support}
-\begin{itemize}
-\item \emph{What types of queries are supported, i.e., point, range, navigation, and/or arbitrary?}
-\item \emph{What is the query language of the system? Is it declarative, functional, algebraic and/or imperative?}
-\item \emph{Are queries automatically optimized?}
-\end{itemize}
+\input{include/group6/03_query_support.tex}
 
 \subsection{Indexes}
-\begin{itemize}
-\item \emph{What index structures are available?}
-\item \emph{What can be indexed? What can be a key? What can be a value?}
-\item \emph{How are indexes managed, i.e., manually or automatically?}
-\end{itemize}
+\input{include/group6/04_indexes.tex}
 
 \subsection{Storage}
-\begin{itemize}
-\item \emph{How is data stored physically, i.e., file format and organization, data catalog, etc.?}
-\item \emph{Where can data be stored physically, i.e., disk or file storage, in-memory (RAM), flash or SSD, traditional database, cloud storage (GFS, HDFS, S3), etc.?}
-\item \emph{How is data accessed, i.e., how do read and write operations work?}
-\end{itemize}
+\input{include/group6/05_storage.tex}
 
 \subsection{Transactions and Concurrency Control}
-\begin{itemize}
-\item \emph{How would you classify the system according to CAP and PAC/ELC?}
-\item \emph{Does the system support transactions?}
-\item \emph{How are transactions implemented, i.e., locks, OCC, MVCC, etc.?}
-\item \emph{What consistency guarantees are given?}
-\end{itemize}
+\input{include/group6/06_tx_and_cc.tex}
 
 \subsection{Scalability, Availability and Fault Tolerance}
-\begin{itemize}
-\item \emph{What types of scalability are supported, i.e., horizontal and/or vertical?}
-\item \emph{What types of data partitioning are supported, i.e., horizontal (sharding) and/or vertical?}
-\item \emph{What types of data replication are supported, i.e., synchronous and/or asynchronous?}
-\item \emph{How is scalability achieved?}
-\item \emph{How is fault tolerance achieved?}
-\item \emph{How is availability achieved?}
-\end{itemize}
+\input{include/group6/07_scal_avail_fault_tol.tex}
 
 \subsection{Platform/Deployment}
-\begin{itemize}
-\item \emph{What cloud infrastructures are supported?}
-\item \emph{What deployment scenarios are supported, i.e., embedded, client/server, multi-core CPU, cloud, etc.?}
-\item \emph{Language bindings?}
-\item \emph{Communication protocols, i.e., JSON, REST, etc.?}
-\end{itemize}
+\input{include/group6/08_platform_deployment.tex}
 
 \subsection{Applications}
-\begin{itemize}
-\item \emph{Have you found any major applications that use this data store and, if so, which ones?}
-\item \emph{Is there a typical kind of applications that use this data store and, if so, how would you characterize them in terms of requirements?}
-\end{itemize}
+\input{include/group6/09_applications.tex}
 
 \subsection{Miscellaneous}
-\begin{itemize}
-\item \emph{Are there any features or interesting aspects that you could not list under the previous points and, if so, which one?}
-\end{itemize}
+\input{include/group6/10_misc.tex}
 
 \newpage
