--- a/handout/include/group6/08_platform_deployment.tex
+++ b/handout/include/group6/08_platform_deployment.tex
@@ -1,8 +1,65 @@
 %!TEX root = ../../main.tex
 
+\subsubsection{Cloud Infrastructures} % (fold)
+\label{ssub:supported_cloud_infrastructures}
+% What cloud infrastructures are supported?
+
+\begin{description}
+	\item[Amazon EC2]
+		self-configured VMs
+	\item[GoGrid\footnote{\url{http://readwrite.com/2011/08/24/the-other-non-sql-alternative}}]
+		Cloud Servers (Windows or Linux VMs)
+	\item[Rackspace]
+		Cloud Servers (basically VMs...);
+		Managed Cloud option does not mention Java but many other programming languages
+\end{description}
+
+% subsubsection supported_cloud_infrastructures (end)
+
+\subsubsection{Deployment Scenarios} % (fold)
+\label{ssub:deployment_scenarios}
+% What deployment scenarios are supported, i.e., embedded, client/server, multi-core CPU, cloud, etc.?
+
+\emph{Requires \textbf{JDK 1.6}, (\textbf{gcc 4.2.x} on Linux).}
+
 \begin{itemize}
-\item \emph{What cloud infrastructures are supported?}
-\item \emph{What deployment scenarios are supported, i.e., embedded, client/server, multi-core CPU, cloud, etc.?}
-\item \emph{Language bindings?}
-\item \emph{Communication protocols, i.e., JSON, REST, etc.?}
+	\item Client/Server
+	\item access graph by loading the boot file and connecting to the graph
+	\item
+		\emph{Lock Server} mandatory,
+		\emph{Data Servers} and \emph{Query Server} optional,
+		installed as system services
+
+	\item CommandLine Tools for ``installation'' without root-privileges
 \end{itemize}
+
+\begin{description}
+	\item[Lock Server] grants locks on data containers to client,
+	mandatory
+	\item[Data Server (AMS)] access to locally stored data files and journal files,
+	optional
+	\item[Query Server] task server for distributed navigation queries,
+	optional
+\end{description}
+
+% subsubsection deployment_scenarios (end)
+
+\subsubsection{Language Bindings} % (fold)
+\label{ssub:language_bindings}
+% Language bindings?
+
+\begin{itemize}
+	\item Java API with plugin support for the Blueprints graph API and Gremlin graph query language
+\end{itemize}
+
+% subsubsection language_bindings (end)
+
+\subsubsection{Communication Protocols} % (fold)
+\label{ssub:communication_protocols}
+% Communication protocols, i.e., JSON, REST, etc.?
+
+\begin{itemize}
+	\item \emph{Lock Server} listening on port 6780, apparently no standardised protocol
+\end{itemize}
+
+% subsubsection communication_protocols (end)
