--- a/handout/include/group6/04_indexes.tex
+++ b/handout/include/group6/04_indexes.tex
@@ -2,6 +2,38 @@
 
 \begin{itemize}
 \item \emph{What index structures are available?}
+	
+	There are three types of indexes:
+	\begin{enumerate}
+		\item \textbf{Graph Index}:
+			\begin{itemize}
+				\item Supports regular expression queries
+				\item Objects of a given type are automatically added to the index
+				\item The user only has to define the class and the fields that should be indexed
+			\end{itemize}
+		\item \textbf{Generic Index}:
+			\begin{itemize}
+				\item Provides range-search lookups on a single attribute
+				\item No support for regular expression queries
+				\item The user has to add objects manually to the index
+			\end{itemize}
+		\item \textbf{Lucene Index}:
+			\begin{itemize}
+				\item Uses Apache Lucene$^{\tiny{TM}}$ full-text indexing and search capabilities
+			\end{itemize}
+	\end{enumerate}
 \item \emph{What can be indexed? What can be a key? What can be a value?}
+	\begin{itemize}
+		\item Attributes of edges and vertices can be indexed
+		\item A Graph Index can index multiple attributes
+		\item A Generic Index can only have a single attribute as a key
+		\item In a Lucene Index multiple attributes can be defined, but in a query only one attribute can be used 
+		\item All standard types (e.g. int, long, float, double, string) can be used as a key
+		\item Edges and vertices can be values of an index
+	\end{itemize}
 \item \emph{How are indexes managed, i.e., manually or automatically?}
+	\begin{itemize}
+		\item A Graph Index is updated automatically
+		\item Generic or Lucene Indexes have to be updated manually by the application 
+	\end{itemize}
 \end{itemize}
