--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -39,6 +39,12 @@ Marc \textit{Spicker}}
 
 \begin{document}
 
+\lstset{
+language=Java,
+keywordstyle=\color{purple},
+captionpos=b
+}
+
 \begin{frame}
 \titlepage
 \end{frame} 
