added short product description

--- a/handout/include/group6/01_general.tex
+++ b/handout/include/group6/01_general.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../../main.tex
 
-\paragraph{Product Website} \url{http://www.inifinitegraph.com}
+\paragraph{Product Website} \url{http://www.infinitegraph.com}
 
 \paragraph{Project Group}
 Jens \textit{Erat}
@@ -11,8 +11,5 @@ Florian \textit{Junghaus}
 Jens \textit{Metzner}
 Marc Steffen \textit{Spicker}
 
-\begin{itemize}
-\item \emph{Product website}
-\item \emph{Short general product description (not a text block from Wikipedia or the product website)}
-\item \emph{Authors of this profile}
-\end{itemize}
+\paragraph{Product description} 
+InfiniteGraph is a NoSQL system which is based on a graph data model. It was released in 2010 and is available as a free and paid version.
