added product description to beamer

--- a/presentation/include/01_general.tex
+++ b/presentation/include/01_general.tex
@@ -2,9 +2,12 @@
 
 \begin{frame}
 \frametitle{General}
+\begin{figure}[htb]
+ 	\centering
+  	\includegraphics[width=6cm]{images/logo}
+\end{figure}
 \begin{itemize}
-\item \emph{Product website}
-\item \emph{Short general product description (not a text block from Wikipedia or the product website)}
-\item \emph{Authors of this profile}
+	\item \emph{\textbf{InfiniteGraph}}\footnote{\url{http://www.infinitegraph.com}} is a NoSQL system which is based on a graph data model
+	\item It was released in 2010 and is available as a free and paid version
 \end{itemize}
 \end{frame} 
