--- a/handout/include/group6/02_data_model.tex
+++ b/handout/include/group6/02_data_model.tex
@@ -1,6 +1,86 @@
 %!TEX root = ../../main.tex
 
+\emph{Precise description of the data model, especially in terms of differences from the \dquote{standard} models presented in the lecture.}
+
+The data model corresponds to a \textbf{property graph} (similar to the lecture)
 \begin{itemize}
-\item \emph{Precise description of the data model, especially in terms of differences from the \dquote{standard} models presented in the lecture.}
-\item \emph{Detailed summary of the basic data manipulation API, i.e., features to create, retrieve, update and delete data items.}
+	\item Nodes and Edges are Objects that can contain arbitrary properties.
+	\item Edges can be incoming, outgoing or bidirectional and always contain a weight
+	\item Java base classes for nodes (BaseNode) and edges (BaseEdge)
+	\begin{itemize}
+		\item[$\rightarrow$] define identity
+		\item[$\rightarrow$] can be extended, attributes added
+		\item[$\rightarrow$] properties can be indexed (by \dquote{own} index
+		or by alternative indices like \textit{Apache Lucene}.
+	\end{itemize}
+\end{itemize}
+
+\emph{Detailed summary of the basic data manipulation API, i.e., features to create, retrieve, update and delete data items.}
+
+The basic data manipulation API:
+
+\begin{itemize}
+
+	\item Database creation / opening	
+	\begin{lstlisting}[caption=(Creating / opening a DB)]
+	GraphFactory.create(dbName);
+	GraphDatabase db = GraphFactory.open(dbName);
+	\end{lstlisting}
+
+	\item Database closing / deletion
+	\begin{lstlisting}[caption=(Closing / deleting a DB)]
+	db.close();
+	GraphFactory.delete(dbName);
+	\end{lstlisting}
+
+	\item Vertex / Edge creation
+	\begin{lstlisting}[caption=(Vertex / Edge creation)]
+	class Person extends BaseVertex;
+	class Friends extends BaseEdge;
+
+	long v1 = db.addVertex(person1);
+	long v2 = db.addVertex(person2);
+	long e1 = person1.addEdge(friends1, person2, 
+	EdgeKind.BIDIRECTIONAL, weight);
+	//long i = db.addEdge(BaseEdge, BaseVertex, 
+	//BaseVertex, EdgeKind, weight);
+	\end{lstlisting}
+
+	\item Vertex / Edge retrieval
+	\begin{lstlisting}[caption=(Vertex / Edge retrieval)]
+	db.getVertex(ID);
+	db.getVertices();
+	db.getEdge(ID);
+	db.getEdges();
+	\end{lstlisting}
+
+	\item Vertex / Edge removal
+	\begin{lstlisting}[caption=(Vertex / Edge removal)]
+	db.removeVertex(person1);
+	db.removeVertexByID(ID);
+	db.removeEdge(friends1);
+	db.removeEdgeByID(ID);
+	\end{lstlisting}
+
+	\item Updates
+	Updates are up to the user!
+
+	\begin{lstlisting}[caption=(User defined update method)]
+	person1.setName("Michael");
+	\end{lstlisting}
+
+	\textbf{BUT:} Adding / removing additional properties not that easy 	$\rightarrow$ new subclass needed!
+	\begin{lstlisting}[caption=(Subclass of Person with additional "age" property)]	
+	class PersonWithAge extends Person;
+
+	void setAge(int age);
+	\end{lstlisting}
+
+\item Handles:
+	\begin{itemize}
+		\item fast access to an object without retrieving the complete object
+		\item stores graph related information like neighbors
+		\item can be customized  by implementing the \textit{VertexHandle}
+		(edge count, edges), \textit{EdgeHandle} (weight, kind, peer)
+	\end{itemize}
 \end{itemize}
