--- a/handout/main.tex
+++ b/handout/main.tex
@@ -3,6 +3,9 @@
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 \usepackage{url}
 \usepackage{ifpdf}
+\usepackage{xcolor}
+\usepackage{listings}
+
 \ifpdf
     \usepackage[pdftex]{graphicx}   % to include graphics
     \pdfcompresslevel=9
@@ -26,6 +29,12 @@
 \newcommand{\dquote}[1]{``#1''}
 
 \begin{document}
+
+\lstset{
+language=Java,
+keywordstyle=\color{purple},
+captionpos=b
+}
 
 \maketitle
 \cleardoublepage
