Not much, there is not much known due to the program being closed source.

--- a/presentation/include/05_storage.tex
+++ b/presentation/include/05_storage.tex
@@ -3,8 +3,12 @@
 \begin{frame}
 \frametitle{Storage}
 \begin{itemize}
-\item \emph{How is data stored physically, i.e., file format and organization, data catalog, etc.?}
-\item \emph{Where can data be stored physically, i.e., disk or file storage, in-memory (RAM), flash or SSD, traditional database, cloud storage (GFS, HDFS, S3), etc.?}
-\item \emph{How is data accessed, i.e., how do read and write operations work?}
+%\item \emph{How is data stored physically, i.e., file format and organization, data catalog, etc.?}
+%\item \emph{Where can data be stored physically, i.e., disk or file storage, in-memory (RAM), flash or SSD, traditional database, cloud storage (GFS, HDFS, S3), etc.?}
+\item In-memory capable as well as persistent on hard drive
+\item If on hard drive: files in a configurable directory
+\item Database can be configurably spread over several servers
+%\item \emph{How is data accessed, i.e., how do read and write operations work?}
+\item Not open source (proprietary file format, unknown inner workings)
 \end{itemize}
 \end{frame} 
