added pauses, fixed some frame titles ;)

--- a/presentation/include/10_misc.tex
+++ b/presentation/include/10_misc.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../main.tex
 
 \begin{frame}
-\frametitle{Beispieltitel}
+\frametitle{Miscellaneous}
 \begin{itemize}
 \item \emph{Are there any features or interesting aspects that you could not list under the previous points and, if so, which one?}
 \begin{itemize}
