--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -90,9 +90,9 @@ captionpos=b
 
 %##########################################################################################
 
-\section{Literaturverzeichnis}
+\section{References}
 \begin{frame}
-\frametitle{Literaturverzeichnis}
+\frametitle{References}
 {\tiny 
 \bibliography{ref}
 }
