--- a/presentation/include/03_query_support.tex
+++ b/presentation/include/03_query_support.tex
@@ -1,10 +1,66 @@
 %!TEX root = ../main.tex
 
-\begin{frame}
-\frametitle{Query support}
+%####################
+\begin{frame}[fragile]
+\frametitle{Query Support}
 \begin{itemize}
-\item \emph{What types of queries are supported, i.e., point, range, navigation, and/or arbitrary?}
-\item \emph{What is the query language of the system? Is it declarative, functional, algebraic and/or imperative?}
-\item \emph{Are queries automatically optimized?}
+\item Single selection by the name of the vertex possible
+\begin{lstlisting}[caption=(Point query)]
+Person michael = db.getNamedVertex("Michael");
+\end{lstlisting}
+\item Predicate Query Language (PQL\footnote{http://wiki.infinitegraph.com/3.1/w/docs/PQL/jgdObjectQualification.html}) is used to scan Database (regular expression also allowed)
+\begin{lstlisting}[caption=(Range query)]
+Query<Person> personQuery = db.createQuery(
+	Person.class.getName(), 
+	"name=='Michael' && age<100");
+\end{lstlisting}
 \end{itemize}
+Queries on the field "name" of the \textit{Person} class will have the optimal performance if there exist a graph index in this field. 
+
 \end{frame} 
+%####################
+
+%####################
+\begin{frame}[fragile]
+\frametitle{Query Support}
+A Navigation API also exist and supports:
+\begin{itemize}
+\item simple breadth first navigation
+\item simple depth first navigation
+\item own path and result qualifiers are allowed
+\begin{itemize}
+\item \textit{path qualifier} is used validate a path
+\item \textit{result qualifier} is used to limit the results to a set that follows given rules
+\end{itemize}
+\item can fire own Callback function that processes the result
+\end{itemize}
+\begin{lstlisting}[caption=(Creating a simple Navigator)]
+PrintPathResultsHandler resultPrinter = 
+new PrintPathResultsHandler();
+Navigator fromMichael = michael.navigate(
+Guide.SIMPLE_DEPTH_FIRST, Qualifier.FOREVER, 
+Qualifier.ANY, resultPrinter);
+\end{lstlisting}
+\end{frame} 
+%####################
+
+%####################
+\begin{frame}[fragile]
+\frametitle{Query Support}
+A simple result qualifier 
+\begin{lstlisting}[caption=(Result qualifier)]
+class IsMichaelQualifier implements Qualifier
+{
+    String name = new String("Michael");
+    public boolean qualify(Path currentPath)
+    {
+        if (name.equals(((Person) (currentPath
+            .getFinalHop().getVertex())).getName()))
+            return true;
+        else
+            return false;
+    }
+}
+\end{lstlisting}
+\end{frame} 
+%####################
