Some general stuff

--- a/presentation/include/09_applications.tex
+++ b/presentation/include/09_applications.tex
@@ -3,7 +3,8 @@
 \begin{frame}
 \frametitle{Applications}
 \begin{itemize}
-\item \emph{Have you found any major applications that use this data store and, if so, which ones?}
-\item \emph{Is there a typical kind of applications that use this data store and, if so, how would you characterize them in terms of requirements?}
+    \item Graph databases are used for analyzing big graphs
+    \item Investigate relationships, not aggregation
+    \item Predecessor application developed when an Objectivity/DB customer needed to analyze relationships for fraud detection
 \end{itemize}
-\end{frame} 
+\end{frame}
