--- a/presentation/include/01_general.tex
+++ b/presentation/include/01_general.tex
@@ -9,5 +9,6 @@
 \begin{itemize}
 	\item \emph{\textbf{InfiniteGraph}}\footnote{\url{http://www.infinitegraph.com}} is a NoSQL system which is based on a graph data model
 	\item It was released in 2010 and is available as a free and paid version
+	\item Built on Objectivity/DB, an object database developed by the same company
 \end{itemize}
 \end{frame} 
