--- a/presentation/include/09_applications.tex
+++ b/presentation/include/09_applications.tex
@@ -6,5 +6,6 @@
     \item Graph databases are used for analyzing big graphs
     \item Investigate relationships, not aggregation
     \item Predecessor application developed when an Objectivity/DB customer needed to analyze relationships for fraud detection
+    \item Customers eg. CIA and Department of Defense, and CPX Interactive (advertisement)
 \end{itemize}
 \end{frame}
