--- a/presentation/include/04_indexes.tex
+++ b/presentation/include/04_indexes.tex
@@ -22,10 +22,10 @@ There are three types of indexes:
 \begin{frame}
 \frametitle{Graph Index}
 \begin{itemize}
-	\item Supports regular expression queries
-	\item Objects of a given type are automatically added to the index
-	\item The user only has to define the class and the fields that should be indexed
-	\item Can index multiple attributes
+	\item Supports regular expression queries \pause
+	\item Objects of a given type are automatically added to the index \pause
+	\item The user only has to define the class and the fields that should be indexed \pause
+	\item Can index multiple attributes \pause
 	\item Is updated automatically
 \end{itemize}
 \end{frame} 
@@ -33,10 +33,10 @@ There are three types of indexes:
 \begin{frame}
 \frametitle{Generic Index}
 \begin{itemize}
-	\item Provides range-search lookups on a single attribute
-	\item No support for regular expression queries
-	\item The user has to add objects manually to the index
-	\item Can only have a single attribute as a key
+	\item Provides range-search lookups on a single attribute \pause
+	\item No support for regular expression queries \pause
+	\item The user has to add objects manually to the index \pause
+	\item Can only have a single attribute as a key \pause
 	\item Has to be updated manually by the application 
 \end{itemize}
 \end{frame} 
