--- a/presentation/include/01_general.tex
+++ b/presentation/include/01_general.tex
@@ -8,6 +8,7 @@
 \end{figure}
 \begin{itemize}
 	\item \emph{\textbf{InfiniteGraph}}\footnote{\url{http://www.infinitegraph.com}} is a NoSQL system which is based on a graph data model
-	\item It was released in 2010 and is available as a free and paid version
+	\item Released in 2010 under a proprietary license
+	\item Originated from ObjectivityDB\footnote{\url{http://www.objectivity.com}}
 \end{itemize}
 \end{frame} 
