--- a/presentation/include/07_scal_avail_fault_tol.tex
+++ b/presentation/include/07_scal_avail_fault_tol.tex
@@ -3,11 +3,15 @@
 \begin{frame}
 \frametitle{Scalability, Availability and Fault Tolerance}
 \begin{itemize}
-\item \emph{What types of scalability are supported, i.e., horizontal and/or vertical?}
-\item \emph{What types of data partitioning are supported, i.e., horizontal (sharding) and/or vertical?}
-\item \emph{What types of data replication are supported, i.e., synchronous and/or asynchronous?}
-\item \emph{How is scalability achieved?}
-\item \emph{How is fault tolerance achieved?}
-\item \emph{How is availability achieved?}
+\item %\emph{What types of scalability are supported, i.e., horizontal and/or vertical?}
+Supports horizontal scaling and sharding
+
+\item %\emph{What types of data replication are supported, i.e., synchronous and/or asynchronous?}
+Synchronous replication or quorum protocols
+\item %\emph{How is scalability achieved?}
+No information about scalability 
+\item %\emph{How is fault tolerance achieved?}
+Replicas for fault tolerance and availability
+%\emph{How is availability achieved?}
 \end{itemize}
 \end{frame} 
