--- a/presentation/include/07_scal_avail_fault_tol.tex
+++ b/presentation/include/07_scal_avail_fault_tol.tex
@@ -17,7 +17,7 @@
 \end{frame} 
 
 \begin{frame}
-\frametitle{What types of data partitioning are supported, i.e., horizontal (sharding) and/or vertical?}}
+\frametitle{What types of data partitioning are supported, i.e., horizontal (sharding) and/or vertical?}
 \begin{itemize}
 	\item Autonomous partition structure	
 	\item Autonomous partitions are independent from network and system failures
