--- a/presentation/include/04_indexes.tex
+++ b/presentation/include/04_indexes.tex
@@ -1,15 +1,15 @@
 %!TEX root = ../main.tex
 
 \begin{frame}
-\frametitle{Types of indexes}
-There are three types of indexes:
+\frametitle{Types of indices}
+There are three types of indices:
 
 \begin{enumerate}
 	\item \textbf{Graph Index}
 	\item \textbf{Generic Index}
 	\item \textbf{Lucene Index}
 \end{enumerate}
-\end{frame} 
+\end{frame}
 
 \begin{frame}
 \frametitle{Graph Index}
@@ -18,9 +18,9 @@ There are three types of indexes:
 	\item Supports regular expression queries \pause
 	\item Can index multiple attributes \pause
 	\item Objects are automatically added to the index \pause
-	\item The user only has to define the class and the fields that should be indexed 
+	\item The user only has to define the class and the fields that should be indexed
 \end{itemize}
-\end{frame} 
+\end{frame}
 
 \begin{frame}
 \frametitle{Generic Index}
@@ -29,9 +29,9 @@ There are three types of indexes:
 	\item Provides range-search lookups on a single attribute \pause
 	\item No support for regular expression queries \pause
 	\item Can only have a single attribute as a key \pause
-	\item The user has to add objects manually to the index 
+	\item The user has to add objects manually to the index
 \end{itemize}
-\end{frame} 
+\end{frame}
 
 \begin{frame}
 \frametitle{Lucene Index}
