--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -33,7 +33,7 @@ Florian \textit{Junghanns},
 Jens \textit{Metzner},
 Marc \textit{Spicker}}
 \institute[]{Universität Konstanz}
-\date{\today} 
+\date{\today}
 
 \newcommand{\dquote}[1]{``#1''}
 
@@ -47,14 +47,14 @@ captionpos=b
 
 \begin{frame}
 \titlepage
-\end{frame} 
+\end{frame}
 
 %##########################################################################################
 
 \begin{frame}
 \frametitle{Content}
 \tableofcontents
-\end{frame} 
+\end{frame}
 
 %##########################################################################################
 
@@ -67,7 +67,7 @@ captionpos=b
 \section{Query Support}
 \input{include/03_query_support.tex}
 
-\section{Indexes}
+\section{Indices}
 \input{include/04_indexes.tex}
 
 \section{Storage}
