--- a/task 1.2/presentation/include/07_scal_avail_fault_tol.tex
+++ b/task 1.2/presentation/include/07_scal_avail_fault_tol.tex
@@ -48,7 +48,7 @@
 \frametitle{How is fault tolerance achieved?}
 \begin{itemize}
 \item Objectivity/DB Fault Tolerant Option
-\item services are distributes and relocates so that each partition is self-sufficient in case of  failure in other partitions
+\item services are distributed and relocated so that each partition is self-sufficient in case of  failure in other partitions
 	
 \end{itemize}
 \end{frame} 
