--- a/task 2.1/presentation/main.tex
+++ b/task 2.1/presentation/main.tex
@@ -61,6 +61,8 @@ captionpos=b
 \section{Data Model}
 \input{include/datamodel.tex}
 
+\section{Index}
+\input{include/index.tex}
 
 \section{Queries}
 \input{include/queries.tex}
