--- a/task 2.1/presentation/main.tex
+++ b/task 2.1/presentation/main.tex
@@ -42,7 +42,8 @@ Marc \textit{Spicker}}
 \lstset{
 language=Java,
 keywordstyle=\color{purple},
-captionpos=b
+captionpos=b,
+showstringspaces=false
 }
 
 \begin{frame}
