Changed lstlisting font.

--- a/task 2.1/presentation/main.tex
+++ b/task 2.1/presentation/main.tex
@@ -43,7 +43,8 @@ Marc \textit{Spicker}}
 language=Java,
 keywordstyle=\color{purple},
 captionpos=b,
-showstringspaces=false
+showstringspaces=false,
+basicstyle=\ttfamily
 }
 
 \begin{frame}
