--- a/task 1.2/handout/include/group6/02_data_model.tex
+++ b/task 1.2/handout/include/group6/02_data_model.tex
@@ -69,7 +69,7 @@ The basic data manipulation API:
 	person1.setName("Michael");
 	\end{lstlisting}
 
-	\textbf{BUT:} Adding / removing additional properties not that easy 	$\rightarrow$ new subclass needed!
+	\textbf{BUT:} Adding / removing additional properties not that easy 	$\rightarrow$ new subclass needed! (not schemaless !)
 	\begin{lstlisting}[caption=(Subclass of Person with additional "age" property)]	
 	class PersonWithAge extends Person;
 
