--- a/task 1.2/handout/include/group6/09_applications.tex
+++ b/task 1.2/handout/include/group6/09_applications.tex
@@ -2,7 +2,12 @@
 
 \begin{itemize}
 \item \emph{Have you found any major applications that use this data store and, if so, which ones?}
+	\begin{itemize}
+		\item used by the CIA and Department of Defense
+		\item CPX Interactive (advertisement)
+	\end{itemize}
 \item \emph{Is there a typical kind of applications that use this data store and, if so, how would you characterize them in terms of requirements?}
-
-\item used by the CIA and Department of Defense
+	\begin{itemize}
+		\item Investigate relationships, not aggregation
+	\end{itemize}
 \end{itemize}
