--- a/task 1.2/handout/include/group6/10_misc.tex
+++ b/task 1.2/handout/include/group6/10_misc.tex
@@ -3,7 +3,7 @@
 \begin{itemize}
 \item \emph{Are there any features or interesting aspects that you could not list under the previous points and, if so, which one?}
 \begin{itemize}
-	\item Supports Blueprings interface and Gremlin query language with plugins
+	\item Supports Blueprints interface and Gremlin query language with plugins
 	\item Closed source :(
 \end{itemize}
 \end{itemize}
